[project]
name = "amage"
description = "This repository provides a set of custom nodes for ComfyUI, designed to improve workflow convenience when working with text, image, video, and audio data."
version = "1.0.0" 
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Sampkao/ComfyUI-Amage"
Documentation = "https://github.com/Sampkao/ComfyUI-Amage" # 如果沒寫 Wiki，可以先連回 Repo
"Bug Tracker" = "https://github.com/Sampkao/ComfyUI-Amage/issues"

[tool.comfy]
PublisherId = "sampkao"  # 填入你在 Registry 看到的 ID (小寫即可)
DisplayName = "Amage"     # 這是顯示在 Registry 上的漂亮名稱
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

